--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "scripts":{
+  "scripts": {
     "start": "nodemon controller.mjs"
   },
   "dependencies": {
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.8.3",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
